--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
             provider: app_user_provider
             custom_authenticators:
                 - App\Security\UserAuthenticator
-                #- App\Security\TraderAuthenticator
+                - App\Security\TraderAuthenticator
 
             logout:
                 path: app_logout
